tests/resource/valid/collection/dictionary_in_fun.mamba
def j := { 10 => 200, 30 => 5 }

def f(key: Int) -> Int => j[key]
