tests/resource/invalid/type/collection/set_behind_function_not_subscriptable.mamba
def x := {0, 51}

def f() -> Set[Int] => x

f()[0]
